<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000C0000"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <TextView
        android:id="@+id/tvOrdenarTitulo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:background="#3F51B5"
        android:gravity="center|end"
        android:text="Ordenar"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textIsSelectable="false"
        android:textSize="32dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvCriterio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCriterio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="128dp"
        android:text="Criterio"
        android:textColor="#000000"
        android:textSize="32dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBuscarOrden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Buscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgAscDesc" />

    <Spinner
        android:id="@+id/spnCriterio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:scrollbarSize="4dp"
        app:layout_constraintStart_toStartOf="@+id/tvCriterio"
        app:layout_constraintTop_toBottomOf="@+id/tvCriterio" />

    <RadioGroup
        android:id="@+id/rgAscDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.572"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPorcentajeBateria">

        <RadioButton
            android:id="@+id/radioButtonAsc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:text="Ascendente"
            android:textSize="16dp" />

        <RadioButton
            android:id="@+id/radioButtonDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="Descendente"
            android:textSize="16dp" />

    </RadioGroup>

    <TextView
        android:id="@+id/tvCapacidadBateria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Capacidad batería"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/etCapacidadBateria"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnCriterio"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/etCapacidadBateria"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="5"
        android:inputType="numberDecimal"
        android:visibility="invisible"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvCapacidadBateria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvCapacidadBateria"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tvPorcentajeBateria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Porcentaje batería"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/tvCapacidadBateria"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@+id/tvCapacidadBateria"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/etPorcentajeBateria"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:ems="3"
        android:inputType="number"
        android:visibility="invisible"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvPorcentajeBateria"
        app:layout_constraintStart_toStartOf="@+id/etCapacidadBateria"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>